e2e/networking/simple-endpoint/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: simple-endpoint
spec:
  description: Diagnostic test for Service endpoint population with a single replica
  steps:
  - name: wait-for-sa
    try:
    - assert:
        resource:
          apiVersion: v1
          kind: ServiceAccount
          metadata:
            name: default
  - name: create-service-and-pod
    try:
    - apply:
        file: 00-install.yaml
    - assert:
        file: 00-assert.yaml
    - script:
        content: |
          set -e
          addr_count=$(kubectl get endpointslices -l kubernetes.io/service-name=nginx-svc -n $NAMESPACE -o jsonpath='{.items[0].endpoints[*].addresses[0]}' | wc -w)
          echo "EndpointSlice address count: $addr_count"
          test "$addr_count" -eq 1
    catch:
    - script:
        content: |
          echo "=== EndpointSlices ==="
          kubectl get endpointslices -n $NAMESPACE -o yaml
          echo "=== Pods ==="
          kubectl get pods -n $NAMESPACE -o wide
    - events: {}
